# extra-word-from-book

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_SPEC.md  BUILD_NOTE.md  DB_SPEC.md  DEPLOYMENT.md  INCIDENT_2026-03-31_GATEWAY_NGINX.md  PIPELINE_SPEC.md  SPEC.md  UI前端提示词.txt  coverage_analysis.py  docker-compose.yml  extract_words.py  merge_word_freq.py  test.txt  个人单词量.txt
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 149ef2fe4559_describe_change.py  20260320_0001_initial_schema.py  20260321_0002_deduplicate_analysis_result_items.py  20260325_0003_known_words_mode_value.py  20260421_0004_add_book_file_type.py  20260422_0005_add_analysis_result_chapters.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: analysis.py  auth.py  books.py  vocab_test.py  vocabularies.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  analysis.py  book.py  user.py
backend/app/pipeline/: analysis_pipeline.py  resources.py  stages.py  types.py
backend/app/schemas/: analysis.py  auth.py  books.py  common.py  vocab_test.py  vocabularies.py
backend/app/services/: analysis_service.py  auth_service.py  book_service.py  vocab_test_service.py  vocabulary_service.py
backend/tests/: test_analysis_chapters.py  test_book_txt_support.py  test_vocab_test.py  test_vocabulary_service.py
deploy/: nginx.conf
frontend/: .env.example  .gitignore  Dockerfile  README.md  app.vue  (+3 more)
(+19 files in other folders)
