[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extra-book-word-backend"
version = "0.1.0"
description = "FastAPI backend for EPUB vocabulary analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2.0",
  "ebooklib>=0.18,<1.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.0,<3.0",
  "email-validator>=2.0,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "PyJWT>=2.8,<3.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
